[package]
name = "jwt-claims"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Structured version of the JWT Claims Set, as referenced at https://datatracker.ietf.org/doc/html/rfc7519#section-4."
repository = "https://github.com/andeya/jwt-claims"
documentation = "https://docs.rs/jwt-claims"
readme = "README.md"
keywords = ["jwt", "api", "token", "claims"]
authors = ["Andeya Lee <andeyalee@outlook.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11", features = ["chrono_0_4"] }
chrono = "0.4"
subtle = "2.4"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
